Fixed CSS to make column selector more visible

--- a/gui/velociraptor/src/themes/coolgray-dark.css
+++ b/gui/velociraptor/src/themes/coolgray-dark.css
@@ -877,7 +877,7 @@ body.coolgray-dark {
   background: var(--color-accent-50);
 }
 
-.coolgray-dark .dropdown-item:active {
+.coolgray-dark .dropdown-item.active {
   background: var(--color-accent-50);
 }
 
